[tool.poetry]
name = "causal-data"
version = "0.1.0"
description = ""
authors = ["mlad-en <downloadsquish@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
dowhy = "^0.11.1"
matplotlib = "^3.8.3"
pandas = "^2.2.0"
numpy = "^1.26.4"
networkx = "^3.2.1"
seaborn = "^0.13.2"
notebook = "^7.1.0"
pingouin = "^0.5.4"
pyarrow = "^15.0.0"
statsmodels = "^0.14.1"
yellowbrick = "^1.5"
cdt = "^0.6.0"
ges = "^1.1.0"
torchvision = "^0.17.1"
hyppo = "^0.4.0"
conditional-independence = "^0.1a6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
